src/styles.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.hipo-button-div {
    @apply w-full text-center md:w-auto;
}

.hipo-app-button-a {
    @apply flex w-full place-content-center items-center rounded-xl border border-purple8 bg-gradient-to-t from-purple5 to-purple6 px-6 py-2 lg:w-auto;
}

.hipo-button-a {
    @apply flex w-full place-content-center items-center rounded-xl border border-purple8 bg-gradient-to-t from-purple5 to-purple6 px-4 py-3 lg:w-auto lg:px-10;
}

.hipo-button-label {
    @apply w-full text-[18px] font-medium lg:w-auto lg:text-[24px];
}

.hipo-learn-more-link-text {
    @apply text-start text-[18px] font-medium text-purple9 lg:text-[24px];
}

.hipo-see-report-link-text {
    @apply text-start text-[14px] font-medium text-purple9 lg:text-[18px];
}

.hipo-section {
    @apply mx-auto mb-16 w-full max-w-screen-xl gap-4 px-4 sm:max-w-screen-sm md:mb-36 md:max-w-screen-xl md:gap-8;
}

.hipo-section-side-touched {
    @apply mb-16 w-screen min-w-[360px] gap-4 lg:mb-36 lg:gap-8;
}

.hipo-section-title {
    @apply text-center text-[36px] font-black text-purple6 lg:text-[55px];
}

.hipo-section-summary {
    @apply text-center text-[20px] font-normal text-white lg:text-[40px];
}

.hipo-section-text {
    @apply text-start text-[16px] font-normal text-white lg:text-[24px];
}

.hipo-footer {
    @apply mx-auto mb-16 w-full gap-4 px-4 sm:max-w-screen-sm md:mb-36 md:max-w-screen-xl md:gap-8;
}

.hipo-cards-list {
    @apply grid w-full grid-cols-1 gap-4 sm:grid-cols-2 md:max-w-screen-xl lg:px-16;
}

.hipo-card {
    @apply mx-auto h-full w-full max-w-[360px] sm:max-w-none;
}

.hipo-how-it-works-card {
    @apply hipo-card rounded-2xl border border-darkblue5 bg-gradient-to-t from-darkblue4 to-darkblue3 p-2 transition-transform hover:scale-[1.02];
}

.hipo-how-it-works-card-bg {
    @apply mx-auto flex h-full w-full flex-row bg-[url(/dots.svg)] py-4;
}

.hipo-how-it-works-card-template {
    @apply mx-auto flex w-full flex-col items-center justify-between gap-4 p-4 text-start md:max-w-full md:px-6;
}

.hipo-how-it-works-card-title {
    @apply text-start text-[24px] font-bold text-white lg:text-[32px];
}

.hipo-how-it-works-card-text {
    @apply text-start text-[18px] font-normal text-white lg:text-[22px];
}

.hipo-audits-card {
    @apply hipo-card transition-transform hover:scale-[1.02];
}

.hipo-audits-card-bg {
    @apply mx-auto flex h-full w-full flex-col items-center gap-4 rounded-lg border border-darkblue5 bg-gradient-to-t from-darkblue4 to-darkblue3 p-6 text-start md:max-w-full;
}

.hipo-audits-card-template {
    @apply text-[20px];
}

.hipo-why-hipo-card {
    @apply hipo-card bg-[url(/card-bg-t.png)] bg-contain bg-no-repeat transition-transform hover:scale-[1.02];
}

.hipo-why-hipo-card-bg {
    @apply mx-auto flex h-full w-full flex-col items-center gap-4 rounded-lg border border-darkblue5 p-4 text-start backdrop-blur-[113.5px] md:max-w-max md:p-6;
}

.hipo-why-hipo-card-title {
    @apply text-start text-[24px] font-medium text-white lg:text-[32px];
}

.hipo-why-hipo-card-text {
    @apply text-start text-[16px] font-normal text-white lg:text-[24px];
}

.hipo-footer-column {
    @apply mb-12 flex w-full flex-col gap-2 text-left md:w-1/5;
}

.hipo-footer-group {
    @apply py-5 text-[20px] font-bold;
}

.hipo-footer-item {
    @apply text-[20px] text-white;
}

